--- a/gotyou.html
+++ b/gotyou.html
@@ -23,8 +23,8 @@
         }, 10);
       }
         setTimeout(function(){
-        alert("Your only choice is to say yes");
-        var audio = new Audio("song.mp3");
+        alert("Your only choice is to say yes!! AHHAHAHA");
+        var audio = new Audio("music/song.mp3");
         audio.play();
       }, 15000);
     </script>
