--- a/gotyou.html
+++ b/gotyou.html
@@ -22,11 +22,10 @@
           }
         }, 10);
       }
-        setTimeout(function(){
-        alert("Your only choice is to say yes!! AHHAHAHA");
-        var audio = new Audio("music/song.mp3");
-        audio.play();
-      }, 15000);
+        function showMessage() {
+        alert("Your only choice is to click Yes, ahahahahah");
+      }
+      setTimeout(showMessage, 15000);
     </script>
  
   </head>
