--- a/gotyou.html
+++ b/gotyou.html
@@ -22,10 +22,11 @@
           }
         }, 10);
       }
-        function showMessage() {
-        alert("Your only choice is to click Yes, ahahahahah");
-      }
-      setTimeout(showMessage, 15000);
+      setTimeout(function(){
+        alert("YOUR ONLY CHOICE IS TO SAY YES!!! HAHAHHA");
+        var audio = new Audio("music/song.mp3");
+        audio.play();
+      }, 12000);
     </script>
  
   </head>
@@ -50,4 +51,3 @@
   </center>  
   </body>
 </html>
-
