--- a/yes.html
+++ b/yes.html
@@ -2,7 +2,11 @@
 <html>
   <head>
     <title>Here is your ring. I love you</title>
-   
+    <script>
+ 	 var audio = new Audio("music/happy.mp3");
+  	 audio.loop = true;
+ 	 audio.play();
+   </script>
   </head>
   <body>
   <center>
@@ -15,4 +19,3 @@
   </center>
   </body>
 </html>
-
