--- a/gotyou.html
+++ b/gotyou.html
@@ -25,6 +25,7 @@
       setTimeout(function(){
         alert("YOUR ONLY CHOICE IS TO SAY YES!!! HAHAHHA");
         var audio = new Audio("music/song.mp3");
+        audio.loop = true;
         audio.play();
       }, 12000);
     </script>
