--- a/index.html
+++ b/index.html
@@ -2,21 +2,28 @@
 <html>
   <head>
     <title>Will You Marry Me?</title>
-  
+  </head>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-  <center>
-    <img src="images/one.jpg" style="width:300px;height:300px;">
-    <br>
-    <h1>Will You Marry Me?</h1>
-   
-      <input type="button" onclick="location.href='yes.html'" value="Yes" style="font-size:30px; padding:20px 20px; border: 2px solid black; color: black;">
-      <input type="button" onclick="location.href='confirm.html'" value="No" style="font-size:30px; padding:20px 20px;  border: 2px solid black; color: black;">
-  
-    <br>
-    <br>
-    <img src="images/two.jpg" style="width:500px;height:300px;">
-  </center>  
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-lg-6">
+          <center>
+            <img src="images/one.jpg" class="img-fluid">
+            <br>
+            <h1>Will You Marry Me?</h1>
+            <input type="button" onclick="location.href='yes.html'" value="Yes" class="btn btn-success">
+            <input type="button" onclick="location.href='confirm.html'" value="No" class="btn btn-danger">
+            <br>
+            <br>
+            <img src="images/two.jpg" class="img-fluid">
+          </center>
+          <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+          <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+          <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
-
