--- a/yes.html
+++ b/yes.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Here is your ring. I love you</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="yes.js"></script>
   </head>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
