--- a/confirm.html
+++ b/confirm.html
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12 col-lg-6">
-          <center>
+          <div class="text-center">
             <img src="images/one.jpg" class="img-fluid">
             <br>
             <h1 class="alert-warning" role="alert">ARE YOUU SUREE??? CONFIRM NOW</h1>
@@ -23,7 +23,7 @@
             <br>
             <br>
             <img src="images/two.jpg" class="img-fluid">
-          </center>
+          </div>
           <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
           <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
