--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
   <head>
     <title>Will You Marry Me?</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Just a fun website untill you try to say no. Why? Well go find out.">
+    <meta name="title" content="Will you Marry me?">
+    <meta name="author" content="sujinphilip">
+    <meta property="og:title" content="Will you marry Me?">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="images/one.jpg">
+    <meta property="og:url" content="https://sujinphilip.github.io/willYouMarryme/">
+    <meta property="og:description" content="Just a Fun website UNTILL YOU TRY TO SAY NO ;-;">
+    <meta property="og:site_name" content="Will you Marry me?">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
