--- a/gotyou.html
+++ b/gotyou.html
@@ -33,7 +33,7 @@
           <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
           <footer class=" text-center">
-            <a class="btn text-white btn-floating m-1" style="background-color: #333333;" href="#!" role="button">
+            <a class="btn text-white btn-floating m-1" style="background-color: #333333;" href="https://github.com/SujinPhilip/willYouMarryme" role="button">
               <i class="fab fa-github"></i>
             </a>
           </footer>
